<resources>
    <string name="app_name">AnimationsTest</string>
    <string name="rotate">Rotate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="shower">Shower</string>
    <string name="background_color">Background color</string>
    <string name="first_fragment_label">First Fragment Label</string>
</resources>