<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standard_margin"
        tools:context=".FirstFragment">

        <Button
            android:id="@+id/rotate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/rotate"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/translate_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:text="@string/translate"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/scale_button"
            app:layout_constraintStart_toEndOf="@+id/rotate_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/scale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/scale"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/fade_button"
            app:layout_constraintStart_toEndOf="@+id/translate_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fade_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/fade"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scale_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/shower_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/shower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scale_button"
            app:layout_constraintTop_toBottomOf="@+id/rotate_button" />

        <Button
            android:id="@+id/colorize_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:text="@string/background_color"
            app:layout_constraintEnd_toEndOf="@+id/translate_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rotate_button" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shower_button"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_star" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>